create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5633,8 +5633,47 @@ section.lazy-placeholder:after {
 .cid-s265S3aq3v blockquote {
   color: #767676;
 }
+.cid-s2g6plnZTL {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-s2g6plnZTL .card-img {
+  background-color: #fff;
+}
+.cid-s2g6plnZTL .card-box {
+  padding: 2rem;
+}
+.cid-s2g6plnZTL h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-s2g6plnZTL p {
+  text-align: left;
+}
+.cid-s2g6plnZTL .mbr-text {
+  color: #767676;
+}
+.cid-s2g6plnZTL .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-s2g6plnZTL .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+@media (min-width: 992px) {
+  .cid-s2g6plnZTL .my-col {
+    flex: 0 0 20%;
+    max-width: 20%;
+    padding: 15px;
+    -webkit-flex: 0 0 20%;
+  }
+}
 .cid-s2aknNZKxA {
-  padding-top: 60px;
+  padding-top: 30px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
