--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -925,211 +925,6 @@ section.lazy-placeholder:after {
     display: block;
   }
 }
-.cid-s2gBeAhE5x {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #b1a374;
-  background: linear-gradient(#b1a374, #efefef);
-}
-.cid-s2gBeAhE5x .carousel-control {
-  background: #000;
-}
-.cid-s2gBeAhE5x .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-s2gBeAhE5x .carousel-item {
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-.cid-s2gBeAhE5x .carousel-item .media-container-row {
-  -webkit-flex-grow: 1;
-  flex-grow: 1;
-}
-.cid-s2gBeAhE5x .carousel-item .wrap-img {
-  text-align: center;
-}
-.cid-s2gBeAhE5x .carousel-item .wrap-img img {
-  max-height: 150px;
-  width: auto;
-  max-width: 100%;
-}
-.cid-s2gBeAhE5x .carousel-controls {
-  display: flex;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-.cid-s2gBeAhE5x .carousel-controls .carousel-control {
-  background: #000;
-  border-radius: 50%;
-  position: static;
-  width: 40px;
-  height: 40px;
-  margin-top: 2rem;
-  border-width: 1px;
-}
-.cid-s2gBeAhE5x .carousel-controls .carousel-control.carousel-control-prev {
-  left: auto;
-  margin-right: 20px;
-  margin-left: 0;
-}
-.cid-s2gBeAhE5x .carousel-controls .carousel-control.carousel-control-next {
-  right: auto;
-  margin-right: 0;
-}
-.cid-s2gBeAhE5x .carousel-controls .carousel-control .mbr-iconfont {
-  font-size: 1rem;
-}
-.cid-s2gBeAhE5x .cloneditem-1,
-.cid-s2gBeAhE5x .cloneditem-2,
-.cid-s2gBeAhE5x .cloneditem-3,
-.cid-s2gBeAhE5x .cloneditem-4,
-.cid-s2gBeAhE5x .cloneditem-5 {
-  display: none;
-}
-.cid-s2gBeAhE5x .col-lg-15 {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 100%;
-  -webkit-flex: 0 0 100%;
-  flex: 0 0 100%;
-  max-width: 100%;
-  position: relative;
-  min-height: 1px;
-  padding-right: 10px;
-  padding-left: 10px;
-  width: 100%;
-}
-@media (min-width: 992px) {
-  .cid-s2gBeAhE5x .col-lg-15 {
-    -ms-flex: 0 0 20%;
-    -webkit-flex: 0 0 20%;
-    flex: 0 0 20%;
-    max-width: 20%;
-    width: 20%;
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides2 > .carousel-item.active.carousel-item-right,
-  .cid-s2gBeAhE5x .carousel-inner.slides2 > .carousel-item.carousel-item-next {
-    left: 0;
-    -webkit-transform: translate3d(50%, 0, 0);
-    transform: translate3d(50%, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides2 > .carousel-item.active.carousel-item-left,
-  .cid-s2gBeAhE5x .carousel-inner.slides2 > .carousel-item.carousel-item-prev {
-    left: 0;
-    -webkit-transform: translate3d(-50%, 0, 0);
-    transform: translate3d(-50%, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides2 > .carousel-item.carousel-item-left,
-  .cid-s2gBeAhE5x .carousel-inner.slides2 > .carousel-item.carousel-item-prev.carousel-item-right,
-  .cid-s2gBeAhE5x .carousel-inner.slides2 > .carousel-item.active {
-    left: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides2 .cloneditem-1,
-  .cid-s2gBeAhE5x .carousel-inner.slides2 .cloneditem-2,
-  .cid-s2gBeAhE5x .carousel-inner.slides2 .cloneditem-3 {
-    display: block;
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides3 > .carousel-item.active.carousel-item-right,
-  .cid-s2gBeAhE5x .carousel-inner.slides3 > .carousel-item.carousel-item-next {
-    left: 0;
-    -webkit-transform: translate3d(33.333333%, 0, 0);
-    transform: translate3d(33.333333%, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides3 > .carousel-item.active.carousel-item-left,
-  .cid-s2gBeAhE5x .carousel-inner.slides3 > .carousel-item.carousel-item-prev {
-    left: 0;
-    -webkit-transform: translate3d(-33.333333%, 0, 0);
-    transform: translate3d(-33.333333%, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides3 > .carousel-item.carousel-item-left,
-  .cid-s2gBeAhE5x .carousel-inner.slides3 > .carousel-item.carousel-item-prev.carousel-item-right,
-  .cid-s2gBeAhE5x .carousel-inner.slides3 > .carousel-item.active {
-    left: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides3 .cloneditem-1,
-  .cid-s2gBeAhE5x .carousel-inner.slides3 .cloneditem-2,
-  .cid-s2gBeAhE5x .carousel-inner.slides3 .cloneditem-3 {
-    display: block;
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides4 > .carousel-item.active.carousel-item-right,
-  .cid-s2gBeAhE5x .carousel-inner.slides4 > .carousel-item.carousel-item-next {
-    left: 0;
-    -webkit-transform: translate3d(25%, 0, 0);
-    transform: translate3d(25%, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides4 > .carousel-item.active.carousel-item-left,
-  .cid-s2gBeAhE5x .carousel-inner.slides4 > .carousel-item.carousel-item-prev {
-    left: 0;
-    -webkit-transform: translate3d(-25%, 0, 0);
-    transform: translate3d(-25%, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides4 > .carousel-item.carousel-item-left,
-  .cid-s2gBeAhE5x .carousel-inner.slides4 > .carousel-item.carousel-item-prev.carousel-item-right,
-  .cid-s2gBeAhE5x .carousel-inner.slides4 > .carousel-item.active {
-    left: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides4 .cloneditem-1,
-  .cid-s2gBeAhE5x .carousel-inner.slides4 .cloneditem-2,
-  .cid-s2gBeAhE5x .carousel-inner.slides4 .cloneditem-3 {
-    display: block;
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides5 > .carousel-item.active.carousel-item-right,
-  .cid-s2gBeAhE5x .carousel-inner.slides5 > .carousel-item.carousel-item-next {
-    left: 0;
-    -webkit-transform: translate3d(20%, 0, 0);
-    transform: translate3d(20%, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides5 > .carousel-item.active.carousel-item-left,
-  .cid-s2gBeAhE5x .carousel-inner.slides5 > .carousel-item.carousel-item-prev {
-    left: 0;
-    -webkit-transform: translate3d(-20%, 0, 0);
-    transform: translate3d(-20%, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides5 > .carousel-item.carousel-item-left,
-  .cid-s2gBeAhE5x .carousel-inner.slides5 > .carousel-item.carousel-item-prev.carousel-item-right,
-  .cid-s2gBeAhE5x .carousel-inner.slides5 > .carousel-item.active {
-    left: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides5 .cloneditem-1,
-  .cid-s2gBeAhE5x .carousel-inner.slides5 .cloneditem-2,
-  .cid-s2gBeAhE5x .carousel-inner.slides5 .cloneditem-3,
-  .cid-s2gBeAhE5x .carousel-inner.slides5 .cloneditem-4 {
-    display: block;
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides6 > .carousel-item.active.carousel-item-right,
-  .cid-s2gBeAhE5x .carousel-inner.slides6 > .carousel-item.carousel-item-next {
-    left: 0;
-    -webkit-transform: translate3d(16.666667%, 0, 0);
-    transform: translate3d(16.666667%, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides6 > .carousel-item.active.carousel-item-left,
-  .cid-s2gBeAhE5x .carousel-inner.slides6 > .carousel-item.carousel-item-prev {
-    left: 0;
-    -webkit-transform: translate3d(-16.666667%, 0, 0);
-    transform: translate3d(-16.666667%, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides6 > .carousel-item.carousel-item-left,
-  .cid-s2gBeAhE5x .carousel-inner.slides6 > .carousel-item.carousel-item-prev.carousel-item-right,
-  .cid-s2gBeAhE5x .carousel-inner.slides6 > .carousel-item.active {
-    left: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  .cid-s2gBeAhE5x .carousel-inner.slides6 .cloneditem-1,
-  .cid-s2gBeAhE5x .carousel-inner.slides6 .cloneditem-2,
-  .cid-s2gBeAhE5x .carousel-inner.slides6 .cloneditem-3,
-  .cid-s2gBeAhE5x .carousel-inner.slides6 .cloneditem-4,
-  .cid-s2gBeAhE5x .carousel-inner.slides6 .cloneditem-5 {
-    display: block;
-  }
-}
 .cid-s20Pn6otgz .navbar {
   padding: .5rem 0;
   background: #b1a374;
@@ -5942,6 +5737,211 @@ section.lazy-placeholder:after {
 }
 .cid-s2amHkv1ri P {
   color: #767676;
+}
+.cid-s2gMEtwSjD {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #b1a374;
+  background: linear-gradient(#b1a374, #efefef);
+}
+.cid-s2gMEtwSjD .carousel-control {
+  background: #000;
+}
+.cid-s2gMEtwSjD .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-s2gMEtwSjD .carousel-item {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-s2gMEtwSjD .carousel-item .media-container-row {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+.cid-s2gMEtwSjD .carousel-item .wrap-img {
+  text-align: center;
+}
+.cid-s2gMEtwSjD .carousel-item .wrap-img img {
+  max-height: 150px;
+  width: auto;
+  max-width: 100%;
+}
+.cid-s2gMEtwSjD .carousel-controls {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-s2gMEtwSjD .carousel-controls .carousel-control {
+  background: #000;
+  border-radius: 50%;
+  position: static;
+  width: 40px;
+  height: 40px;
+  margin-top: 2rem;
+  border-width: 1px;
+}
+.cid-s2gMEtwSjD .carousel-controls .carousel-control.carousel-control-prev {
+  left: auto;
+  margin-right: 20px;
+  margin-left: 0;
+}
+.cid-s2gMEtwSjD .carousel-controls .carousel-control.carousel-control-next {
+  right: auto;
+  margin-right: 0;
+}
+.cid-s2gMEtwSjD .carousel-controls .carousel-control .mbr-iconfont {
+  font-size: 1rem;
+}
+.cid-s2gMEtwSjD .cloneditem-1,
+.cid-s2gMEtwSjD .cloneditem-2,
+.cid-s2gMEtwSjD .cloneditem-3,
+.cid-s2gMEtwSjD .cloneditem-4,
+.cid-s2gMEtwSjD .cloneditem-5 {
+  display: none;
+}
+.cid-s2gMEtwSjD .col-lg-15 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  -webkit-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-right: 10px;
+  padding-left: 10px;
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-s2gMEtwSjD .col-lg-15 {
+    -ms-flex: 0 0 20%;
+    -webkit-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+    width: 20%;
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides2 > .carousel-item.active.carousel-item-right,
+  .cid-s2gMEtwSjD .carousel-inner.slides2 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(50%, 0, 0);
+    transform: translate3d(50%, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides2 > .carousel-item.active.carousel-item-left,
+  .cid-s2gMEtwSjD .carousel-inner.slides2 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides2 > .carousel-item.carousel-item-left,
+  .cid-s2gMEtwSjD .carousel-inner.slides2 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-s2gMEtwSjD .carousel-inner.slides2 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides2 .cloneditem-1,
+  .cid-s2gMEtwSjD .carousel-inner.slides2 .cloneditem-2,
+  .cid-s2gMEtwSjD .carousel-inner.slides2 .cloneditem-3 {
+    display: block;
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides3 > .carousel-item.active.carousel-item-right,
+  .cid-s2gMEtwSjD .carousel-inner.slides3 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(33.333333%, 0, 0);
+    transform: translate3d(33.333333%, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides3 > .carousel-item.active.carousel-item-left,
+  .cid-s2gMEtwSjD .carousel-inner.slides3 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-33.333333%, 0, 0);
+    transform: translate3d(-33.333333%, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides3 > .carousel-item.carousel-item-left,
+  .cid-s2gMEtwSjD .carousel-inner.slides3 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-s2gMEtwSjD .carousel-inner.slides3 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides3 .cloneditem-1,
+  .cid-s2gMEtwSjD .carousel-inner.slides3 .cloneditem-2,
+  .cid-s2gMEtwSjD .carousel-inner.slides3 .cloneditem-3 {
+    display: block;
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides4 > .carousel-item.active.carousel-item-right,
+  .cid-s2gMEtwSjD .carousel-inner.slides4 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(25%, 0, 0);
+    transform: translate3d(25%, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides4 > .carousel-item.active.carousel-item-left,
+  .cid-s2gMEtwSjD .carousel-inner.slides4 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-25%, 0, 0);
+    transform: translate3d(-25%, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides4 > .carousel-item.carousel-item-left,
+  .cid-s2gMEtwSjD .carousel-inner.slides4 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-s2gMEtwSjD .carousel-inner.slides4 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides4 .cloneditem-1,
+  .cid-s2gMEtwSjD .carousel-inner.slides4 .cloneditem-2,
+  .cid-s2gMEtwSjD .carousel-inner.slides4 .cloneditem-3 {
+    display: block;
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides5 > .carousel-item.active.carousel-item-right,
+  .cid-s2gMEtwSjD .carousel-inner.slides5 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(20%, 0, 0);
+    transform: translate3d(20%, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides5 > .carousel-item.active.carousel-item-left,
+  .cid-s2gMEtwSjD .carousel-inner.slides5 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides5 > .carousel-item.carousel-item-left,
+  .cid-s2gMEtwSjD .carousel-inner.slides5 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-s2gMEtwSjD .carousel-inner.slides5 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides5 .cloneditem-1,
+  .cid-s2gMEtwSjD .carousel-inner.slides5 .cloneditem-2,
+  .cid-s2gMEtwSjD .carousel-inner.slides5 .cloneditem-3,
+  .cid-s2gMEtwSjD .carousel-inner.slides5 .cloneditem-4 {
+    display: block;
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides6 > .carousel-item.active.carousel-item-right,
+  .cid-s2gMEtwSjD .carousel-inner.slides6 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(16.666667%, 0, 0);
+    transform: translate3d(16.666667%, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides6 > .carousel-item.active.carousel-item-left,
+  .cid-s2gMEtwSjD .carousel-inner.slides6 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-16.666667%, 0, 0);
+    transform: translate3d(-16.666667%, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides6 > .carousel-item.carousel-item-left,
+  .cid-s2gMEtwSjD .carousel-inner.slides6 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-s2gMEtwSjD .carousel-inner.slides6 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-s2gMEtwSjD .carousel-inner.slides6 .cloneditem-1,
+  .cid-s2gMEtwSjD .carousel-inner.slides6 .cloneditem-2,
+  .cid-s2gMEtwSjD .carousel-inner.slides6 .cloneditem-3,
+  .cid-s2gMEtwSjD .carousel-inner.slides6 .cloneditem-4,
+  .cid-s2gMEtwSjD .carousel-inner.slides6 .cloneditem-5 {
+    display: block;
+  }
 }
 .cid-s265WRYs1l {
   padding-top: 45px;
