--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -710,16 +710,243 @@ iframe.lazy-placeholder,
 section.lazy-placeholder:after {
   opacity: 0.3;
 }
-.cid-s1NvSC35jr {
-  background-image: url("../../../assets/images/imag1758-uyosemde-2000x1485.jpg");
+.cid-s2IOkizFks .modal-body .close {
+  background: #1b1b1b;
 }
-.cid-s1NESmfHvM {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
+.cid-s2IOkizFks .modal-body .close span {
+  font-style: normal;
 }
-.cid-s1NESmfHvM .mbr-text {
-  color: #767676;
+.cid-s2IOkizFks .carousel-inner > .active,
+.cid-s2IOkizFks .carousel-inner > .next,
+.cid-s2IOkizFks .carousel-inner > .prev {
+  display: table;
+}
+.cid-s2IOkizFks .carousel-control .icon-next,
+.cid-s2IOkizFks .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.cid-s2IOkizFks .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-s2IOkizFks .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-s2IOkizFks .boxed-slider {
+  position: relative;
+  padding: 93px 0;
+}
+.cid-s2IOkizFks .boxed-slider > div {
+  position: relative;
+}
+.cid-s2IOkizFks .container img {
+  width: 100%;
+}
+.cid-s2IOkizFks .container img + .row {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.cid-s2IOkizFks .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-s2IOkizFks .mbr-table-cell {
+  padding: 0;
+}
+.cid-s2IOkizFks .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-s2IOkizFks .carousel-caption {
+  top: 50%;
+  right: 0;
+  bottom: auto;
+  left: 0;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-align-items: center;
+}
+.cid-s2IOkizFks .mbr-overlay {
+  z-index: 1;
+}
+.cid-s2IOkizFks .container-slide.container {
+  min-width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-s2IOkizFks .carousel-item {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -o-transition: -o-transform 0.6s ease-in-out;
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+}
+@media (max-width: 576px) {
+  .cid-s2IOkizFks .carousel-item .container {
+    width: 100%;
+  }
+}
+.cid-s2IOkizFks .carousel-item-next.carousel-item-left,
+.cid-s2IOkizFks .carousel-item-prev.carousel-item-right {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.cid-s2IOkizFks .active.carousel-item-right,
+.cid-s2IOkizFks .carousel-item-next {
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+}
+.cid-s2IOkizFks .active.carousel-item-left,
+.cid-s2IOkizFks .carousel-item-prev {
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+.cid-s2IOkizFks .mbr-slider .carousel-control {
+  top: 50%;
+  width: 70px;
+  height: 70px;
+  margin-top: -1.5rem;
+  font-size: 35px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all .3s;
+}
+.cid-s2IOkizFks .mbr-slider .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-s2IOkizFks .mbr-slider .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-s2IOkizFks .mbr-slider .carousel-control .mbr-iconfont {
+  font-size: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-s2IOkizFks .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-s2IOkizFks .mbr-slider .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-s2IOkizFks .mbr-slider .carousel-indicators li {
+  max-width: 20px;
+  width: 20px;
+  height: 20px;
+  max-height: 20px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: .5;
+  transition: all .3s;
+}
+.cid-s2IOkizFks .mbr-slider .carousel-indicators li.active,
+.cid-s2IOkizFks .mbr-slider .carousel-indicators li:hover {
+  opacity: .9;
+}
+.cid-s2IOkizFks .mbr-slider .carousel-indicators li::after,
+.cid-s2IOkizFks .mbr-slider .carousel-indicators li::before {
+  content: none;
+}
+.cid-s2IOkizFks .mbr-slider .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 576px) {
+  .cid-s2IOkizFks .mbr-slider .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-s2IOkizFks .mbr-slider > .container img {
+  width: 100%;
+}
+.cid-s2IOkizFks .mbr-slider > .container img + .row {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cid-s2IOkizFks .mbr-slider > .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+@media (max-width: 576px) {
+  .cid-s2IOkizFks .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-s2IOkizFks .mbr-slider .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-s2IOkizFks .mbr-slider .mbr-table-cell {
+  padding: 0;
+}
+.cid-s2IOkizFks .carousel-item .container.container-slide {
+  position: initial;
+  width: auto;
+  min-height: 0;
+}
+.cid-s2IOkizFks .full-screen .slider-fullscreen-image {
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+.cid-s2IOkizFks .full-screen .slider-fullscreen-image.active {
+  display: -o-flex;
+}
+.cid-s2IOkizFks .full-screen .container {
+  width: auto;
+  padding-right: 0;
+  padding-left: 0;
+}
+.cid-s2IOkizFks .full-screen .carousel-item .container.container-slide {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-s2IOkizFks .full-screen .carousel-item .container.container-slide img {
+  display: none;
+}
+.cid-s2IOkizFks .mbr-background-video-preview {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.cid-s2IOkizFks .mbr-overlay ~ .container-slide {
+  z-index: auto;
 }
 .cid-s1NJMIx2HK {
   padding-top: 45px;
