--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2817,6 +2817,57 @@ section.lazy-placeholder:after {
 .cid-s2m3WD8iFU .mbr-author-name {
   color: #232323;
 }
+.cid-s3il7hC4ku {
+  padding-top: 30px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s3il7hC4ku .testimonials-container {
+  margin: 0 auto;
+}
+.cid-s3il7hC4ku .testimonials-container .testimonials-item {
+  justify-content: center;
+  margin-top: 3rem;
+  -webkit-justify-content: center;
+}
+.cid-s3il7hC4ku .testimonials-container .testimonials-item .user {
+  background: #efefef;
+}
+.cid-s3il7hC4ku .testimonials-container .testimonials-item .user.row {
+  margin: 0;
+}
+.cid-s3il7hC4ku .testimonials-container .testimonials-item .user .user_image {
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  margin: 2rem auto 2rem auto;
+}
+.cid-s3il7hC4ku .testimonials-container .testimonials-item .user .user_image img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-s3il7hC4ku .testimonials-container .testimonials-item .user .testimonials-caption {
+  padding: 2rem;
+  padding: 2rem 2rem 2rem 0;
+}
+@media (max-width: 260px) {
+  .cid-s3il7hC4ku .user_image {
+    width: 100% !important;
+    height: auto !important;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s3il7hC4ku .testimonials-caption {
+    padding: 0 2rem 2rem 2rem !important;
+  }
+}
+.cid-s3il7hC4ku .mbr-section-subtitle {
+  color: #232323;
+}
+.cid-s3il7hC4ku H2 {
+  color: #149dcc;
+}
 .cid-s1Oje6PFzY {
   padding-top: 45px;
   padding-bottom: 30px;
