create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -948,6 +948,9 @@ section.lazy-placeholder:after {
 .cid-s2IOkizFks .mbr-overlay ~ .container-slide {
   z-index: auto;
 }
+.cid-s2IOkizFks P {
+  text-align: center;
+}
 .cid-s3txJFfpV2 {
   padding-top: 45px;
   padding-bottom: 45px;
